code update on frontend Master validation #1

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="top1a flex">
         <p> Huddle re-imagines the way we build communities. You have a voice, but so does
           your audience. Create connections with your users as you engage in genuine discussion.</p>
-        <button id="btn">
+        <button class="btn">
           Get Started For Free</button>
       </div>
 
@@ -108,7 +108,7 @@
 
       <div class="foot-text">
         <h3 style="font-family:Poppins, sans-serif;"> Ready To Build Your Community?</h3>
-        <button id="btn"> Get Started For Free</button>
+        <button class="btn"> Get Started For Free</button>
       </div>
     </div>
 
