--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="main-body-banner">
 
-      <img class="upperlower-img aa" src="/images/bg-section-top-desktop-1.svg" alt="">
+      <img class="upperlower-img aa" src="/images/bg-section-top-desktop-1.svg" alt="top-Desktop-1">
       <div class="Grow-Together">
         <div class="grow">
           <h3 style="font-family:Poppins, sans-serif;"> Grow Together</h3>
@@ -76,11 +76,11 @@
           alt="illustration of Grow Together">
       </div>
 
-      <img class="upperlower-img bx " src="/images/bg-section-bottom-desktop-1.svg" alt="">
+      <img class="upperlower-img bx " src="/images/bg-section-bottom-desktop-1.svg" alt="bottom-Desktop-1">
       <div class="next-section">
         <img class="main-body-banner-pic" src="/images/illustration-flowing-conversation.svg"
           alt="illustration-flowing-conversation">
-        <div class="flowing">
+        <div class="flowing">T
 
           <div class="flow">
             <h3 style="font-family:Poppins, sans-serif;">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <img class="upperlower-img aa bx" src="/images/bg-section-top-desktop-2.svg" alt="">
+      <img class="upperlower-img aa bx" src="/images/bg-section-top-desktop-2.svg" alt="top-Desktop-2">
       <div class="user">
 
         <div class="users-text">
@@ -104,7 +104,7 @@
         <img class="main-body-banner-pic" src="/images/illustration-grow-together.svg"
           alt="illustration of Grow Together">
       </div>
-      <img class="upperlower-img bx " src="/images/bg-section-bottom-desktop-2.svg" alt="">
+      <img class="upperlower-img bx " src="/images/bg-section-bottom-desktop-2.svg" alt="bottom-Desktop-2">
 
       <div class="foot-text">
         <h3 style="font-family:Poppins, sans-serif;"> Ready To Build Your Community?</h3>
@@ -114,13 +114,13 @@
 
 
     <footer>
-      <img class="upperlower-img aa bx " src="/images/bg-footer-top-mobile.svg" alt="">
+      <img class="upperlower-img aa bx " src="/images/bg-footer-top-mobile.svg" alt="Footer-Background Image">
 
 
       <div class="footeryu">
         <div class="left">
           <div class="box">
-            <img class="kk" src="/images/icon2messageinfooter.svg" alt="" style="margin: 0 1rem;">
+            <img class="kk" src="/images/icon2messageinfooter.svg" alt="Message Icon" style="margin: 0 1rem;">
 
             <span>
               <h3 style="letter-spacing: 0.2rem; font-family:Poppins, sans-serif;">Huddle</h3>
@@ -153,7 +153,7 @@
           <div class="social-media-icon">
             <a href="#"><img class="resize" src="/images/icons8-facebook-52.png" alt="facebook Icon"></a>
             <a href="#"><img class="resize" src="/images/icons8-instagram-32.png" alt="instagram-icon"></a>
-            <a href="#"><img class="resize" src="/images/icons8-twitter-squared-50.png" alt=""></a>
+            <a href="#"><img class="resize" src="/images/icons8-twitter-squared-50.png" alt="Twiter Icon"></a>
 
           </div>
         </div>
