--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
           </div>
 
           <div class="social-media-icon">
-            <a href="#"><img class="resize" src="/images/icons8-facebook-52.png" alt="facebook Icon"></a>
-            <a href="#"><img class="resize" src="/images/icons8-instagram-32.png" alt="instagram-icon"></a>
-            <a href="#"><img class="resize" src="/images/icons8-twitter-squared-50.png" alt="Twiter Icon"></a>
+            <img class="resize" src="/images/icons8-facebook-52.png" alt="facebook Icon">
+            <img class="resize" src="/images/icons8-instagram-32.png" alt="instagram-icon">
+            <img class="resize" src="/images/icons8-twitter-squared-50.png" alt="Twiter Icon">
 
           </div>
         </div>
