--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <img class="upperlower-img aa" src="/images/bg-section-top-desktop-1.svg" alt="top-Desktop-1">
       <div class="Grow-Together">
         <div class="grow">
-          <h3 style="font-family:Poppins, sans-serif;"> Grow Together</h3>
+          <h3 class="infixe"> Grow Together</h3>
           <p class="spacing">
             Generate meaningful discussions with your audience and build a strong, loyal community.
             Think of the insightful conversations you miss out on with a feedback form.
@@ -83,7 +83,7 @@
         <div class="flowing">T
 
           <div class="flow">
-            <h3 style="font-family:Poppins, sans-serif;">
+            <h3 class="infixe">
               Flowing Conversations</h3>
             <p class="spacing">
               You wouldn't paginate a conversation in real life, so why do it online? Our threads have
@@ -96,7 +96,7 @@
 
         <div class="users-text">
 
-          <h3 style="font-family:Poppins, sans-serif;"> Your Users</h3>
+          <h3 class="infixe"> Your Users</h3>
           <p class="spacing">
             It takes no time at all to integrate Huddle with your app's authentication solution. This means,
             once signed in to your app, your users can start chatting immediately.</p>
@@ -107,7 +107,7 @@
       <img class="upperlower-img bx " src="/images/bg-section-bottom-desktop-2.svg" alt="bottom-Desktop-2">
 
       <div class="foot-text">
-        <h3 style="font-family:Poppins, sans-serif;"> Ready To Build Your Community?</h3>
+        <h3 class="infixe"> Ready To Build Your Community?</h3>
         <button class="btn"> Get Started For Free</button>
       </div>
     </div>
