--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="top2">
-      <h1 style="font-family: 'Poppins', sans-serif;">
+      <h1>
         Build The Community Your Fans Will Love</h1>
 
       <div class="top1a flex">
@@ -123,7 +123,7 @@
             <img class="kk" src="/images/icon2messageinfooter.svg" alt="Message Icon" style="margin: 0 1rem;">
 
             <span>
-              <h3 style="letter-spacing: 0.2rem; font-family:Poppins, sans-serif;">Huddle</h3>
+              <h3 class="alpha">Huddle</h3>
             </span>
           </div>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
