--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="full-card">
+  <div class="full-card" role="main">
     <div class="head">
 
       <img id="huu-image" src="/images/logo.svg" alt="Huddle-Logo">
