--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <img class="kk" src="/images/icon2messageinfooter.svg" alt="Message Icon" style="margin: 0 1rem;">
 
             <span>
-              <h3 class="alpha">Huddle</h3>
+              <h3>Huddle</h3>
             </span>
           </div>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
