--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
           <div class="box">
             <img class="kk" src="/images/icon2messageinfooter.svg" alt="Message Icon" style="margin: 0 1rem;">
 
-            <span>
+            <div class="omfo"></div>
               <h3>Huddle</h3>
-            </span>
+            
           </div>
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia
             vestibulum a, ultrices quis sem.</p>
